# licitabot

./: .gitignore  Dockerfile  docker-compose.dev.yaml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  litellm_config.yaml  pgadmin-servers.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2497eea6c56b_adding_execution_model.py  c6066214bc86_make_columns_in_execution_timezone_aware.py  db21080428bf_create_initial_tables.py
docs/: README.md  ai.md  contratacao-ingestion-service.md  devplan.md  intro.md  marketing.md  mvp.md  pricing.md  referencias.md  roadmap.md  stack.md  vision.md
licitabot/: config.py  db.py  settings.py  test.py
licitabot/application/: bootstrap.py  dtos.py  interfaces.py  raw_contratacao_ingestion_service.py  service_factory.py
licitabot/application/factories/: __init__.py  ingestion.py  pncp_embeddings.py
licitabot/application/interfaces/: __init__.py  contracatoes_source.py  embeddings.py  embeddings_client.py  pncp_api_client.py  repositories.py  repository.py
licitabot/application/services/: contratacoes_ingestion.py  ingestion.py  pncp_embeddings.py
licitabot/common/: database_utils.py  schemas.py
licitabot/domain/: entities.py  services.py  value_objects.py
licitabot/domain/entities/: __init__.py
licitabot/infrastructure/: embeddings_client.py  pncp_api_client.py
licitabot/infrastructure/adapter/: pncp_contratacoes_source_adapter.py
licitabot/infrastructure/adapters/: dtos.py  litellm_adapter.py  pncp_api_consulta_adapter.py  pncp_api_pncp_adapter.py
licitabot/infrastructure/database/: base.py  session.py
licitabot/infrastructure/embeddings/: __init__.py  licitabot_embeddings_api_client.py  openai_embeddings_api_client.py  pncp_embeddings.py
licitabot/infrastructure/execution_tracker/: models.py  (+1 more)
migrations/models/: 0_20250825141240_init.py
pncp_ingestion_service/: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  README_ENV.md  alembic.ini  docker-compose.yaml  env.local.example  requirements.txt  run_tests.sh  start_local.sh
pncp_ingestion_service/database/: init.sql
pncp_ingestion_service/ingestor/: config.py  consumer.py  utils.py
pncp_ingestion_service/scripts/: init_database.py
pncp_ingestion_service/tests/: __init__.py  run_all_tests.py  test_database.py  test_local.py  test_persistence.py  test_rabbitmq.py  test_utils.py
scripts/: debug  down  raw-contratacao-ingestion  reset_migrations.sh  up  update_tables
tests/: debug.py
(+99 files in other folders)
