[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "licitabot"
version = "0.1.0"
description = "PNCP ingestion and processing service"
authors = [{name = "Gabriel Fritz Cavalcante"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "faststream[rabbit]",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "tenacity",
    "python-dotenv",
    "alembic",
    "apscheduler",
]


[project.scripts]
raw-contratacao-ingestion-consumer = "licitabot.presentation.raw_contratacao_ingestion.raw_contratacao_ingestion_consumer.main:main"
raw-contratacao-ingestion-cli = "licitabot.presentation.raw_contratacao_ingestion.raw_contratacao_ingestion_cli.main:main"
licitabot-scheduler = "licitabot.presentation.scheduler.main:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["licitabot*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
